@@ -1315,5 +1315,4 @@ LSYM(Lchange_\register):
 #include "ieee754-df.S"
 #include "ieee754-sf.S"
 #include "bpabi.S"
-#include "libunwind.S"
 #endif /* __symbian__ */
